syntax = "proto3";

import "google/protobuf/descriptor.proto";
extend google.protobuf.FieldOptions {
  string default = 246305090;
  int32 min = 246305091;
  int32 max = 246305092;
  uint32 bits = 246305093;
}

message Config {
  Items items = 1;
}


// Optional vs default
//  - partial has _everything_ optional
//  - filled has defaults filled in, but some still optional

message Items {
  ItemPlacement placement = 1;
  bool mezame_mimics = 2 [(default) = "false"];
  uint32 mezame_chests = 3
    [(default) = "0", (min) = 0, (max) = 2];
}

message ItemPlacement {
  PlacementAlgorithm algorithm = 1 [(default) = "ASSUMED"];
  float temperature = 2 [(default) = "infinity", (bits) = 8];
  float area_balance_factor = 3 [(default) = "0"];
  uint32 minimum_sphere_decay = 4 [(default) = "1"];
  //map<ItemName, uint32> minimum_sphere = 5;
  //map<CheckName, ItemName> force = 6;
}

enum ItemName {
  SWORD_OF_WIND = 0;
  SWORD_OF_FIRE = 1;
  SWORD_OF_WATER = 2;
  SWORD_OF_THUNDER = 3;
  CRYSTALIS = 4;
  BALL_OF_WIND = 5;
}

enum CheckName {
  LEAF_ELDER = 0;
  OAK_ELDER = 1;
  WATERFALL_CAVE_RIGHT_BRANCH_CHEST = 2;
  STXY_LEFT_BRANCH_UPPER_CHEST = 3;
}

enum PlacementAlgorithm {
  UNSPECIFIED = 0;
  ASSUMED = 1;
  FORWARD = 2;
}
